# bebra_inside

./: CMakeLists.txt  base_filters.cpp  base_filters.h  bitmap.cpp  bitmap.h  cmd_arg_parser.h  filter_pipeline_factory.cpp  filter_pipeline_factory.h  image_processor.cpp
